# rocoder

./: .gitignore  Cargo.toml  README.md  freq_cutoff.cl  hello.rs  hotswap_sample.rs  installation_todo.org  kernel.rs  partial_swoop.cl  sketch.py  swoop.rs  tan.rs  test.cl  thinner.cl  thinner.rs  wobble.cl  wobble.rs
installation/: Cargo.toml
installation/src/: installation.rs  installation_processor.rs  lib.rs  main.rs
installation_scripts/: crontab  hours_manager.py  install.sh  installation.service  tail_logs.sh
src/: audio.rs  audio_files.rs  audio_reader.rs  cl_sandbox.rs  cpal_utils.rs  crossfade.rs  duration_parser.rs  dynamic_test.rs  fft.rs  hotswapper.rs  installation.rs  installation_processor.rs  lib.rs  main.rs  math.rs  mixer.rs  opencl.rs  play_bin.rs  player.rs  player_processor.rs  power.rs  recorder.rs  recorder_processor.rs  resampler.rs  runtime_setup.rs  slices.rs  stretcher.rs  stretcher_processor.rs  test_utils.rs  wav.rs  windows.rs
src/signal_flow/: node.rs
