[package]
name = "rocoder"
version = "0.1.0"
authors = ["Andrew Yoon <andrew@nothing-to-say.org>"]
edition = "2021"

[lib]
name = "rocoder"
path = "src/lib.rs"

[[bin]]
name = "rocoder"
path = "src/main.rs"

[[bin]]
name = "play"
path = "src/play_bin.rs"

[profile.release]
debug = true  # keep debug symbols in release build for profiling

[dependencies]
rustfft = "^6.0.1"
num-traits = "^0.2.14"
hound = "^3.4.0"
rand = "^0.8.4"
stopwatch = "^0.0.7"
log = "^0.4.14"
simplelog = "^0.11.2"
structopt = "^0.3.26"
minimp3 = "^0.5.1"
cpal = "^0.13"
libc = "^0.2.116"
pbr = "^1.0.4"
ctrlc = "^3.2.1"
anyhow = "^1.0"
libloading = "^0.7"
tempfile = "^3.3.0"
crossbeam-channel = "^0.5.2"
fwatch = "^0.1.5"
slice-deque = "^0.3.0"
slice_ring_buf = "^0.2"

[dev-dependencies]
test-case = "^1.2.1"
