[package]
name = "rocoder"
version = "0.4.0"
authors = ["Andrew Yoon <andrew@nothing-to-say.org>"]
repository = "https://github.com/ajyoon/rocoder"
edition = "2021"
description = "A live-codeable phase vocoder"
license = "CC0-1.0"
keywords = ["audio", "synthesizer", "live-code"]
categories = ["multimedia::audio"]
homepage = "https://github.com/ajyoon/rocoder"
readme = "README.md"

[lib]
name = "rocoder"
path = "src/lib.rs"

[profile.release]
debug = true  # keep debug symbols in release build for profiling

[dependencies]
rustfft = "^6.1.0"
num-traits = "^0.2.17"
hound = "^3.5.1"
rand = "^0.8.5"
stopwatch = "^0.0.7"
log = "^0.4.20"
simplelog = "^0.12.1"
structopt = "^0.3.26"
minimp3 = "^0.5.1"
cpal = "^0.15.2"
libc = "^0.2.151"
ctrlc = "^3.4.2"
anyhow = "^1.0.77"
libloading = "^0.8.1"
tempfile = "^3.9.0"
crossbeam-channel = "^0.5.10"
fwatch = "^0.1.5"
slice-deque = "^0.3.0"
slice_ring_buf = "^0.2.7"

[dev-dependencies]
test-case = "^3.3.1"
