[package]
name = "installation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocoder = { path = "../" }
structopt = "*"
anyhow = "1.0"
crossbeam-channel = "*"
cpal = "0.11"
rand = "0.7"
slice-deque = "*"