[package]
name = "installation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocoder = { path = "../" }
structopt = "^0.3.26"
anyhow = "^1.0"
crossbeam-channel = "^0.5.2"
cpal = "^0.13"
rand = "^0.8.4"
slice-deque = "^0.3.0"
log = "^0.4.14"
simplelog = "^0.11.2"